--- a/sales_forecasting.ipynb
+++ b/sales_forecasting.ipynb
@@ -1611,11 +1611,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_date(merged_df)"
+    "split_date(merged_df)\n",
+    "split_date(merged_test_df)"
    ]
   },
   {
@@ -1638,11 +1639,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "comp_months(merged_df)"
+    "comp_months(merged_df)\n",
+    "comp_months(merged_test_df)"
    ]
   },
   {
@@ -2355,11 +2357,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "promo_cols(merged_df)"
+    "promo_cols(merged_df)\n",
+    "promo_cols(merged_test_df)"
    ]
   },
   {
@@ -2715,6 +2718,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_inputs = merged_test_df[input_cols].copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
    "outputs": [],
@@ -2783,11 +2795,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs['CompetitionDistance'].fillna(max_distance, inplace=True)"
+    "inputs['CompetitionDistance'].fillna(max_distance, inplace=True)\n",
+    "test_inputs['CompetitionDistance'].fillna(max_distance, inplace=True)"
    ]
   },
   {
@@ -2807,6 +2820,15 @@
     "\n",
     "scaler = MinMaxScaler().fit(inputs[numeric_cols])\n",
     "inputs[numeric_cols] = scaler.transform(inputs[numeric_cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_inputs[numeric_cols] = scaler.transform(test_inputs[numeric_cols])"
    ]
   },
   {
@@ -2860,20 +2882,182 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inputs[encoded_cols] = encoder.transform(inputs[categorical_cols])"
+    "inputs[encoded_cols] = encoder.transform(inputs[categorical_cols])\n",
+    "test_inputs[encoded_cols] = encoder.transform(test_inputs[categorical_cols])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = inputs[numeric_cols + encoded_cols]"
+    "X = inputs[numeric_cols + encoded_cols]\n",
+    "X_test = test_inputs[numeric_cols + encoded_cols]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(844392, 30)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "model = tf.keras.Sequential()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Input Layer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(tf.keras.layers.Dense(128, kernel_initializer='normal',input_dim = X.shape[1], activation='relu'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Hidden Layers:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
+    "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
+    "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Output Layer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(tf.keras.layers.Dense(1, kernel_initializer='normal',activation='linear'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Compiling the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " dense (Dense)               (None, 128)               3968      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 256)               33024     \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 256)               65792     \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 256)               65792     \n",
+      "                                                                 \n",
+      " dense_4 (Dense)             (None, 1)                 257       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 168,833\n",
+      "Trainable params: 168,833\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(loss='mean_absolute_error', optimizer='adam', metrics=['mean_absolute_error'])\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "21110/21110 [==============================] - 98s 5ms/step - loss: 1865.3989 - mean_absolute_error: 1865.3989 - val_loss: 1798.4913 - val_mean_absolute_error: 1798.4913\n",
+      "Epoch 2/5\n",
+      "21110/21110 [==============================] - 91s 4ms/step - loss: 1782.2427 - mean_absolute_error: 1782.2427 - val_loss: 1816.9238 - val_mean_absolute_error: 1816.9238\n",
+      "Epoch 3/5\n",
+      "21110/21110 [==============================] - 56s 3ms/step - loss: 1729.7544 - mean_absolute_error: 1729.7544 - val_loss: 1720.9999 - val_mean_absolute_error: 1720.9999\n",
+      "Epoch 4/5\n",
+      "21110/21110 [==============================] - 98s 5ms/step - loss: 1674.7629 - mean_absolute_error: 1674.7629 - val_loss: 1705.1163 - val_mean_absolute_error: 1705.1163\n",
+      "Epoch 5/5\n",
+      "21110/21110 [==============================] - 102s 5ms/step - loss: 1619.8074 - mean_absolute_error: 1619.8074 - val_loss: 1688.3751 - val_mean_absolute_error: 1688.3751\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1d50dbb5de0>"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(X, targets, epochs=5, batch_size=32, validation_split = 0.2)"
    ]
   },
   {
