--- a/sales_forecasting.ipynb
+++ b/sales_forecasting.ipynb
@@ -2921,8 +2921,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Neural Network Training & Testing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2940,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2956,11 +2963,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
+    "#model.add(tf.keras.layers.Dropout(0.2))\n",
     "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
     "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))"
    ]
@@ -2974,7 +2982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2990,26 +2998,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense (Dense)               (None, 128)               3968      \n",
+      " dense_10 (Dense)            (None, 128)               3968      \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 256)               33024     \n",
+      " dense_11 (Dense)            (None, 256)               33024     \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 256)               65792     \n",
+      " dense_12 (Dense)            (None, 256)               65792     \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 256)               65792     \n",
+      " dense_13 (Dense)            (None, 256)               65792     \n",
       "                                                                 \n",
-      " dense_4 (Dense)             (None, 1)                 257       \n",
+      " dense_14 (Dense)            (None, 1)                 257       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 168,833\n",
@@ -3026,7 +3034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3034,24 +3042,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "21110/21110 [==============================] - 98s 5ms/step - loss: 1865.3989 - mean_absolute_error: 1865.3989 - val_loss: 1798.4913 - val_mean_absolute_error: 1798.4913\n",
+      "21110/21110 [==============================] - 143s 7ms/step - loss: 1899.4796 - mean_absolute_error: 1899.4796 - val_loss: 1813.3362 - val_mean_absolute_error: 1813.3362\n",
       "Epoch 2/5\n",
-      "21110/21110 [==============================] - 91s 4ms/step - loss: 1782.2427 - mean_absolute_error: 1782.2427 - val_loss: 1816.9238 - val_mean_absolute_error: 1816.9238\n",
+      "21110/21110 [==============================] - 140s 7ms/step - loss: 1794.8049 - mean_absolute_error: 1794.8049 - val_loss: 1771.5625 - val_mean_absolute_error: 1771.5625\n",
       "Epoch 3/5\n",
-      "21110/21110 [==============================] - 56s 3ms/step - loss: 1729.7544 - mean_absolute_error: 1729.7544 - val_loss: 1720.9999 - val_mean_absolute_error: 1720.9999\n",
+      "21110/21110 [==============================] - 136s 6ms/step - loss: 1728.5748 - mean_absolute_error: 1728.5748 - val_loss: 1865.3267 - val_mean_absolute_error: 1865.3267\n",
       "Epoch 4/5\n",
-      "21110/21110 [==============================] - 98s 5ms/step - loss: 1674.7629 - mean_absolute_error: 1674.7629 - val_loss: 1705.1163 - val_mean_absolute_error: 1705.1163\n",
+      "21110/21110 [==============================] - 144s 7ms/step - loss: 1667.1815 - mean_absolute_error: 1667.1815 - val_loss: 1679.1749 - val_mean_absolute_error: 1679.1749\n",
       "Epoch 5/5\n",
-      "21110/21110 [==============================] - 102s 5ms/step - loss: 1619.8074 - mean_absolute_error: 1619.8074 - val_loss: 1688.3751 - val_mean_absolute_error: 1688.3751\n"
+      "21110/21110 [==============================] - 107s 5ms/step - loss: 1599.0182 - mean_absolute_error: 1599.0182 - val_loss: 1658.4263 - val_mean_absolute_error: 1658.4263\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1d50dbb5de0>"
+       "<keras.callbacks.History at 0x1d5133bbb80>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
