--- a/sales_forecasting.ipynb
+++ b/sales_forecasting.ipynb
@@ -2924,18 +2924,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Network Training & Testing"
+    "# Model Training & Comparison"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `ANN` - main model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "\n",
-    "model = tf.keras.Sequential()"
+    "neural_net = tf.keras.Sequential()"
    ]
   },
   {
@@ -2947,11 +2954,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(tf.keras.layers.Dense(128, kernel_initializer='normal',input_dim = X.shape[1], activation='relu'))"
+    "neural_net.add(tf.keras.layers.Dense(128, kernel_initializer='normal',input_dim = X.shape[1], activation='relu'))"
    ]
   },
   {
@@ -2963,14 +2970,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
-    "#model.add(tf.keras.layers.Dropout(0.2))\n",
-    "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
-    "model.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))"
+    "neural_net.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
+    "#neural_net.add(tf.keras.layers.Dropout(0.2))\n",
+    "neural_net.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))\n",
+    "neural_net.add(tf.keras.layers.Dense(512, kernel_initializer='normal',activation='relu'))\n",
+    "neural_net.add(tf.keras.layers.Dense(256, kernel_initializer='normal',activation='relu'))"
    ]
   },
   {
@@ -2982,11 +2990,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.add(tf.keras.layers.Dense(1, kernel_initializer='normal',activation='linear'))"
+    "neural_net.add(tf.keras.layers.Dense(1, kernel_initializer='normal',activation='linear'))"
    ]
   },
   {
@@ -2998,26 +3006,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_10 (Dense)            (None, 128)               3968      \n",
+      " dense_15 (Dense)            (None, 128)               3968      \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 256)               33024     \n",
+      " dense_16 (Dense)            (None, 256)               33024     \n",
       "                                                                 \n",
-      " dense_12 (Dense)            (None, 256)               65792     \n",
+      " dense_17 (Dense)            (None, 256)               65792     \n",
       "                                                                 \n",
-      " dense_13 (Dense)            (None, 256)               65792     \n",
+      " dense_18 (Dense)            (None, 256)               65792     \n",
       "                                                                 \n",
-      " dense_14 (Dense)            (None, 1)                 257       \n",
+      " dense_19 (Dense)            (None, 1)                 257       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 168,833\n",
@@ -3028,13 +3036,13 @@
     }
    ],
    "source": [
-    "model.compile(loss='mean_absolute_error', optimizer='adam', metrics=['mean_absolute_error'])\n",
-    "model.summary()"
+    "neural_net.compile(loss='mean_absolute_error', optimizer='adam', metrics=['mean_absolute_error'])\n",
+    "neural_net.summary()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -3042,30 +3050,94 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "21110/21110 [==============================] - 143s 7ms/step - loss: 1899.4796 - mean_absolute_error: 1899.4796 - val_loss: 1813.3362 - val_mean_absolute_error: 1813.3362\n",
+      "21110/21110 [==============================] - 112s 5ms/step - loss: 1902.8877 - mean_absolute_error: 1902.8877 - val_loss: 1834.7229 - val_mean_absolute_error: 1834.7229\n",
       "Epoch 2/5\n",
-      "21110/21110 [==============================] - 140s 7ms/step - loss: 1794.8049 - mean_absolute_error: 1794.8049 - val_loss: 1771.5625 - val_mean_absolute_error: 1771.5625\n",
+      "21110/21110 [==============================] - 97s 5ms/step - loss: 1793.5272 - mean_absolute_error: 1793.5272 - val_loss: 1849.4301 - val_mean_absolute_error: 1849.4301\n",
       "Epoch 3/5\n",
-      "21110/21110 [==============================] - 136s 6ms/step - loss: 1728.5748 - mean_absolute_error: 1728.5748 - val_loss: 1865.3267 - val_mean_absolute_error: 1865.3267\n",
+      "21110/21110 [==============================] - 96s 5ms/step - loss: 1724.4698 - mean_absolute_error: 1724.4698 - val_loss: 1754.4225 - val_mean_absolute_error: 1754.4225\n",
       "Epoch 4/5\n",
-      "21110/21110 [==============================] - 144s 7ms/step - loss: 1667.1815 - mean_absolute_error: 1667.1815 - val_loss: 1679.1749 - val_mean_absolute_error: 1679.1749\n",
+      "21110/21110 [==============================] - 103s 5ms/step - loss: 1660.1796 - mean_absolute_error: 1660.1796 - val_loss: 1708.8182 - val_mean_absolute_error: 1708.8182\n",
       "Epoch 5/5\n",
-      "21110/21110 [==============================] - 107s 5ms/step - loss: 1599.0182 - mean_absolute_error: 1599.0182 - val_loss: 1658.4263 - val_mean_absolute_error: 1658.4263\n"
+      "21110/21110 [==============================] - 99s 5ms/step - loss: 1592.3434 - mean_absolute_error: 1592.3434 - val_loss: 1662.8313 - val_mean_absolute_error: 1662.8313\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x1d5133bbb80>"
+       "<keras.callbacks.History at 0x1d51e3d6ad0>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X, targets, epochs=5, batch_size=32, validation_split = 0.2)"
+    "neural_net.fit(X, targets, epochs=5, batch_size=32, validation_split = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `XGB` - for comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBRegressor\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "def XGB_train_evaluate(X_train, train_targets, X_val, val_targets, **params):\n",
+    "    xgb = XGBRegressor(n_jobs=-1, random_state=42, n_estimators=1000, \n",
+    "                     learning_rate=0.2, max_depth=10, subsample=0.9, \n",
+    "                     colsample_bytree=0.7, **params)\n",
+    "    xgb.fit(X_train, train_targets)\n",
+    "    train_mae = mean_absolute_error(xgb.predict(X_train), train_targets)\n",
+    "    val_mae = mean_absolute_error(xgb.predict(X_val), val_targets)\n",
+    "    return xgb, train_mae, val_mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold\n",
+    "kfold = KFold(n_splits=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train mae: 262.8542830974122, Validation mae: 787.2435957306691\n",
+      "Train mae: 265.15711877418437, Validation mae: 739.5186735112799\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb_models = []\n",
+    "\n",
+    "for train_idxs, val_idxs in kfold.split(X):\n",
+    "    X_train, train_targets = X.iloc[train_idxs], targets.iloc[train_idxs]\n",
+    "    X_val, val_targets = X.iloc[val_idxs], targets.iloc[val_idxs]\n",
+    "    xgb, train_mae, val_mae = XGB_train_evaluate(X_train, \n",
+    "                                                     train_targets, \n",
+    "                                                     X_val, \n",
+    "                                                     val_targets)\n",
+    "    xgb_models.append(xgb)\n",
+    "    print('Train mae: {}, Validation mae: {}'.format(train_mae, val_mae))"
    ]
   },
   {
