--- a/sales_forecasting.ipynb
+++ b/sales_forecasting.ipynb
@@ -2936,7 +2936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2954,7 +2954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2970,7 +2970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2990,7 +2990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3006,30 +3006,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_5\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_15 (Dense)            (None, 128)               3968      \n",
+      " dense_26 (Dense)            (None, 128)               3968      \n",
       "                                                                 \n",
-      " dense_16 (Dense)            (None, 256)               33024     \n",
+      " dense_27 (Dense)            (None, 256)               33024     \n",
       "                                                                 \n",
-      " dense_17 (Dense)            (None, 256)               65792     \n",
+      " dense_28 (Dense)            (None, 256)               65792     \n",
       "                                                                 \n",
-      " dense_18 (Dense)            (None, 256)               65792     \n",
+      " dense_29 (Dense)            (None, 512)               131584    \n",
       "                                                                 \n",
-      " dense_19 (Dense)            (None, 1)                 257       \n",
+      " dense_30 (Dense)            (None, 256)               131328    \n",
+      "                                                                 \n",
+      " dense_31 (Dense)            (None, 1)                 257       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 168,833\n",
-      "Trainable params: 168,833\n",
+      "Total params: 365,953\n",
+      "Trainable params: 365,953\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -3042,38 +3044,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n",
-      "21110/21110 [==============================] - 112s 5ms/step - loss: 1902.8877 - mean_absolute_error: 1902.8877 - val_loss: 1834.7229 - val_mean_absolute_error: 1834.7229\n",
-      "Epoch 2/5\n",
-      "21110/21110 [==============================] - 97s 5ms/step - loss: 1793.5272 - mean_absolute_error: 1793.5272 - val_loss: 1849.4301 - val_mean_absolute_error: 1849.4301\n",
-      "Epoch 3/5\n",
-      "21110/21110 [==============================] - 96s 5ms/step - loss: 1724.4698 - mean_absolute_error: 1724.4698 - val_loss: 1754.4225 - val_mean_absolute_error: 1754.4225\n",
-      "Epoch 4/5\n",
-      "21110/21110 [==============================] - 103s 5ms/step - loss: 1660.1796 - mean_absolute_error: 1660.1796 - val_loss: 1708.8182 - val_mean_absolute_error: 1708.8182\n",
-      "Epoch 5/5\n",
-      "21110/21110 [==============================] - 99s 5ms/step - loss: 1592.3434 - mean_absolute_error: 1592.3434 - val_loss: 1662.8313 - val_mean_absolute_error: 1662.8313\n"
+      "Epoch 1/20\n",
+      "21110/21110 [==============================] - 148s 7ms/step - loss: 1882.9501 - mean_absolute_error: 1882.9501 - val_loss: 1833.5992 - val_mean_absolute_error: 1833.5992\n",
+      "Epoch 2/20\n",
+      "21110/21110 [==============================] - 148s 7ms/step - loss: 1763.9326 - mean_absolute_error: 1763.9326 - val_loss: 1773.8427 - val_mean_absolute_error: 1773.8427\n",
+      "Epoch 3/20\n",
+      "21110/21110 [==============================] - 153s 7ms/step - loss: 1671.8063 - mean_absolute_error: 1671.8063 - val_loss: 1686.0496 - val_mean_absolute_error: 1686.0496\n",
+      "Epoch 4/20\n",
+      "21110/21110 [==============================] - 148s 7ms/step - loss: 1574.2405 - mean_absolute_error: 1574.2405 - val_loss: 1671.9839 - val_mean_absolute_error: 1671.9839\n",
+      "Epoch 5/20\n",
+      "21110/21110 [==============================] - 167s 8ms/step - loss: 1469.4479 - mean_absolute_error: 1469.4479 - val_loss: 1577.2712 - val_mean_absolute_error: 1577.2712\n",
+      "Epoch 6/20\n",
+      " 5466/21110 [======>.......................] - ETA: 1:59 - loss: 1398.1224 - mean_absolute_error: 1398.1224"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x1d51e3d6ad0>"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "neural_net.fit(X, targets, epochs=5, batch_size=32, validation_split = 0.2)"
+    "neural_net.fit(X, targets, epochs=20, batch_size=32, validation_split = 0.2)"
    ]
   },
   {
@@ -3122,7 +3116,10 @@
      "output_type": "stream",
      "text": [
       "Train mae: 262.8542830974122, Validation mae: 787.2435957306691\n",
-      "Train mae: 265.15711877418437, Validation mae: 739.5186735112799\n"
+      "Train mae: 265.15711877418437, Validation mae: 739.5186735112799\n",
+      "Train mae: 264.4488187944134, Validation mae: 715.6597538215977\n",
+      "Train mae: 262.3956976774722, Validation mae: 791.8394155590979\n",
+      "Train mae: 262.2407316472063, Validation mae: 868.1444612750238\n"
      ]
     }
    ],
