model evaluation and submission

--- a/sales_forecasting.ipynb
+++ b/sales_forecasting.ipynb
@@ -2924,19 +2924,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Model Training & Comparison"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### `ANN` - main model"
+    "# Model Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2954,7 +2947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2970,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2990,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3006,28 +2999,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_5\"\n",
+      "Model: \"sequential_6\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " dense_26 (Dense)            (None, 128)               3968      \n",
+      " dense_32 (Dense)            (None, 128)               3968      \n",
       "                                                                 \n",
-      " dense_27 (Dense)            (None, 256)               33024     \n",
+      " dense_33 (Dense)            (None, 256)               33024     \n",
       "                                                                 \n",
-      " dense_28 (Dense)            (None, 256)               65792     \n",
+      " dense_34 (Dense)            (None, 256)               65792     \n",
       "                                                                 \n",
-      " dense_29 (Dense)            (None, 512)               131584    \n",
+      " dense_35 (Dense)            (None, 512)               131584    \n",
       "                                                                 \n",
-      " dense_30 (Dense)            (None, 256)               131328    \n",
+      " dense_36 (Dense)            (None, 256)               131328    \n",
       "                                                                 \n",
-      " dense_31 (Dense)            (None, 1)                 257       \n",
+      " dense_37 (Dense)            (None, 1)                 257       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 365,953\n",
@@ -3044,97 +3037,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20\n",
-      "21110/21110 [==============================] - 148s 7ms/step - loss: 1882.9501 - mean_absolute_error: 1882.9501 - val_loss: 1833.5992 - val_mean_absolute_error: 1833.5992\n",
-      "Epoch 2/20\n",
-      "21110/21110 [==============================] - 148s 7ms/step - loss: 1763.9326 - mean_absolute_error: 1763.9326 - val_loss: 1773.8427 - val_mean_absolute_error: 1773.8427\n",
-      "Epoch 3/20\n",
-      "21110/21110 [==============================] - 153s 7ms/step - loss: 1671.8063 - mean_absolute_error: 1671.8063 - val_loss: 1686.0496 - val_mean_absolute_error: 1686.0496\n",
-      "Epoch 4/20\n",
-      "21110/21110 [==============================] - 148s 7ms/step - loss: 1574.2405 - mean_absolute_error: 1574.2405 - val_loss: 1671.9839 - val_mean_absolute_error: 1671.9839\n",
-      "Epoch 5/20\n",
-      "21110/21110 [==============================] - 167s 8ms/step - loss: 1469.4479 - mean_absolute_error: 1469.4479 - val_loss: 1577.2712 - val_mean_absolute_error: 1577.2712\n",
-      "Epoch 6/20\n",
-      " 5466/21110 [======>.......................] - ETA: 1:59 - loss: 1398.1224 - mean_absolute_error: 1398.1224"
+      "Epoch 1/5\n",
+      "21110/21110 [==============================] - 177s 8ms/step - loss: 1880.8892 - mean_absolute_error: 1880.8892 - val_loss: 1798.0452 - val_mean_absolute_error: 1798.0452\n",
+      "Epoch 2/5\n",
+      "21110/21110 [==============================] - 181s 9ms/step - loss: 1755.6151 - mean_absolute_error: 1755.6151 - val_loss: 1841.0068 - val_mean_absolute_error: 1841.0068\n",
+      "Epoch 3/5\n",
+      "21110/21110 [==============================] - 185s 9ms/step - loss: 1657.4893 - mean_absolute_error: 1657.4893 - val_loss: 1712.4362 - val_mean_absolute_error: 1712.4362\n",
+      "Epoch 4/5\n",
+      "21110/21110 [==============================] - 184s 9ms/step - loss: 1539.4327 - mean_absolute_error: 1539.4327 - val_loss: 1628.7572 - val_mean_absolute_error: 1628.7572\n",
+      "Epoch 5/5\n",
+      "21110/21110 [==============================] - 168s 8ms/step - loss: 1406.6521 - mean_absolute_error: 1406.6521 - val_loss: 1440.4351 - val_mean_absolute_error: 1440.4351\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1d563771e40>"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "neural_net.fit(X, targets, epochs=20, batch_size=32, validation_split = 0.2)"
+    "neural_net.fit(X, targets, epochs=5, batch_size=32, validation_split = 0.2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `XGB` - for comparison"
+    "# Testing & Submission"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from xgboost import XGBRegressor\n",
-    "from sklearn.metrics import mean_absolute_error\n",
-    "\n",
-    "def XGB_train_evaluate(X_train, train_targets, X_val, val_targets, **params):\n",
-    "    xgb = XGBRegressor(n_jobs=-1, random_state=42, n_estimators=1000, \n",
-    "                     learning_rate=0.2, max_depth=10, subsample=0.9, \n",
-    "                     colsample_bytree=0.7, **params)\n",
-    "    xgb.fit(X_train, train_targets)\n",
-    "    train_mae = mean_absolute_error(xgb.predict(X_train), train_targets)\n",
-    "    val_mae = mean_absolute_error(xgb.predict(X_val), val_targets)\n",
-    "    return xgb, train_mae, val_mae"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import KFold\n",
-    "kfold = KFold(n_splits=5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train mae: 262.8542830974122, Validation mae: 787.2435957306691\n",
-      "Train mae: 265.15711877418437, Validation mae: 739.5186735112799\n",
-      "Train mae: 264.4488187944134, Validation mae: 715.6597538215977\n",
-      "Train mae: 262.3956976774722, Validation mae: 791.8394155590979\n",
-      "Train mae: 262.2407316472063, Validation mae: 868.1444612750238\n"
+      "A submission file has been made\n"
      ]
     }
    ],
    "source": [
-    "xgb_models = []\n",
+    "def make_submission(prediction):\n",
+    "  my_submission = pd.DataFrame({'Id':merged_test_df.Id,'Sales':prediction})\n",
+    "  my_submission.to_csv('submission.csv',index=False)\n",
+    "  print('A submission file has been made')\n",
     "\n",
-    "for train_idxs, val_idxs in kfold.split(X):\n",
-    "    X_train, train_targets = X.iloc[train_idxs], targets.iloc[train_idxs]\n",
-    "    X_val, val_targets = X.iloc[val_idxs], targets.iloc[val_idxs]\n",
-    "    xgb, train_mae, val_mae = XGB_train_evaluate(X_train, \n",
-    "                                                     train_targets, \n",
-    "                                                     X_val, \n",
-    "                                                     val_targets)\n",
-    "    xgb_models.append(xgb)\n",
-    "    print('Train mae: {}, Validation mae: {}'.format(train_mae, val_mae))"
+    "predictions = neural_net.predict(X_test)\n",
+    "make_submission(predictions[:,0])"
    ]
   },
   {
