revision and update

--- a/sales_forecasting.ipynb
+++ b/sales_forecasting.ipynb
@@ -3241,7 +3241,7 @@
    ],
    "source": [
     "#Relation between Customers and Promo (avilable or not)\n",
-    "sns.barplot(x = 'Promo', y = 'Customers', data = merged_df);"
+    "sns.barplot(x = 'Promo', y = 'Customers', data = merged_df)"
    ]
   },
   {
